# software-patterns

./: .bettercodehub.yml  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: cicd.yml  codecov-upload.yml  labeler.yaml
docs/: conf.py  development.rst  finalle.rst  index.rst  introduction.rst  modules.rst  software-design-patterns.rst  software_patterns.rst  software_patterns_api_ref.rst  spelling_wordlist.txt
docs/patterns-implementations/: memoize.rst  notification.rst  proxy.rst  subclass-registry.rst
requirements/: docs.txt
src/software_patterns/: __init__.py  handler.py  memoize.py  notification.py  proxy.py  singleton.py  subclass_registry.py
tests/: test_memoize.py  test_notification.py  test_proxy.py  test_singleton.py  test_subclass_registry.py
tests/e2e/notification/: test_async_listener.py  test_async_listener_exception.py  test_cls_listener.py  test_composition_listener.py  test_event_data.py  test_instance_listener.py  test_static_listener.py  test_sync_listener_exception.py
