[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "software_patterns"
version = "2.0.0"
description = "Software Design Patterns with types in Python."
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
	{ name = "Konstantinos Lampridis", email = "boromir674@hotmail.com" }
]
requires-python = ">=3.6"
keywords = [
	"software design patterns", "design patterns", "software patterns", "python library"
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Natural Language :: English",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Documentation :: Sphinx",
	"Topic :: Scientific/Engineering",
	"Topic :: Software Development",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Software Distribution",
	"Topic :: Utilities",
	"Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/boromir674/software_patterns"
"Documentation" = "https://software-patterns.readthedocs.io/"
"Bug Tracker" = "https://github.com/boromir674/software-patterns/issues"
"Source Code" = "https://github.com/boromir674/software-patterns"

[project.optional-dependencies]
test = ["pytest"]


[tool.flake8]
max_line_length = 120
exclude = ".tox,venv,env,env-dev"

[tool.pytest.ini_options]
python_files = ["tests/test_*.py", "tests/*", "*/test_*.py"]

[tool.semantic_release]
version_variable = "src/software_patterns/__init__.py:__version__"
version_source = "source"
upload_to_pypi = false
upload_to_release = false

[tool.check-manifest]
ignore = [
	"CHANGELOG.rst",
	"docs/*",
	"docs/patterns-implementations/*",
	"docs/static/*",
	"requirements/*",
	"scripts/*.py",
	"tox.ini",
	".bettercodehub.yml",
	".circleci/config.yml",
	".coveragerc",
	".DS_Store",
	".gitignore",
	".prospector.yml",
	".pylintrc",
	".readthedocs.yml",
	".scrutinizer.yml",
	".travis.yml"
]

[tool.software_patterns.package_data]
software_patterns = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]


## Black formatting/linting

[tool.black]
line-length = 95
include = '\.pyi?$'
extend-exclude = '''
'''


[tool.isort]
profile = "black"
line_length = 120
skip = [".tox", "venv", "env", "env-dev"]
default_section = "THIRDPARTY"
known_first_party = ["src", "tests"]


[tool.software-release]
version_variable = "src/software_patterns/__init__.py:__version__"
