# INSTRUCT PIP to use Poetry as build backend (instead of legacy setuptools)
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "software_patterns"
version = "2.0.1"
description = "Software Design Patterns with types in Python."
readme = "README.rst"
license = { file = "LICENSE" }
authors = [ { name = "Konstantinos Lampridis", email = "boromir674@hotmail.com" } ]
maintainers = [ { name = "Konstantinos Lampridis", email = "boromir674@hotmail.com" } ]
keywords = [
    "software design patterns", "design patterns", "software patterns", "python library"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed"
]

#### ALLOWED PYTHON ####
requires-python = ">=3.6, <3.13"


[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<10.0.0 ; python_full_version >= '3.8' and python_full_version < '3.13'",
    "pytest-asyncio>=0.20.3,<2.0.0 ; python_full_version >= '3.8' and python_full_version < '3.13'",
    "pytest-cov>=5.0.0,<8.0.0 ; python_full_version >= '3.8' and python_full_version < '3.13'",
]
docs = [
    "beautifulsoup4>=4.8.2,<4.9.0 ; python_full_version >= '3.7' and python_full_version < '3.13'",
    "furo>=2021.11.23,<2024.5.6",
    "furo>=2021.8.31,<2024.5.6 ; python_full_version >= '3.8'",
    # "sphinx>=4.0,<5.0 ; python_full_version >= '3.8'",
    "sphinx>=5.0,<6.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "sphinx-argparse-cli>=1.5,<2.0.0 ; python_full_version >= '3.8'",
    "sphinx-autodoc-typehints>=1.10,<2.0.0 ; python_full_version >= '3.8'",
    "sphinx-rtd-theme==0.5.0 ; python_full_version >= '3.8'",
    "sphinxcontrib-applehelp>=1.0.8,<2.0.0 ; python_full_version >= '3.9' and python_full_version < '3.13'",
    "sphinxcontrib-spelling==7.6.2 ; python_full_version >= '3.8'",
    "typing-extensions>=4.10.0,<5.0.0 ; python_full_version >= '3.9' and python_full_version < '3.13'",
]

[tool.check-manifest]
ignore = [
	"CHANGELOG.rst",
	"docs/*",
	"docs/patterns-implementations/*",
	"docs/static/*",
	"requirements/*",
	"scripts/*.py",
	"tox.ini",
	".bettercodehub.yml",
	".circleci/config.yml",
	".coveragerc",
	".DS_Store",
	".gitignore",
	".prospector.yml",
	".pylintrc",
	".readthedocs.yml",
	".scrutinizer.yml",
	".travis.yml"
]



## USE below when migrating to uv
[project.urls]
"Homepage" = "https://github.com/boromir674/software_patterns"
"Documentation" = "https://software-patterns.readthedocs.io/"
"Bug Tracker" = "https://github.com/boromir674/software-patterns/issues"
"Source Code" = "https://github.com/boromir674/software-patterns"



## Black formatting/linting

[tool.black]
line-length = 95
include = '\.pyi?$'
extend-exclude = '''
'''


[tool.isort]
profile = "black"
line_length = 120
skip = [".tox", "venv", "env", "env-dev"]
default_section = "THIRDPARTY"
known_first_party = ["src", "tests"]


[tool.flake8]
max_line_length = 120
exclude = ".tox,venv,env,env-dev"


[tool.pytest.ini_options]
python_files = ["tests/test_*.py", "tests/*", "*/test_*.py"]
