[metadata]
## Setuptools specific information
name = software_patterns
version = 1.0.0
description = Software Design Patterns with types in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE, Pretrained_Model_LICENSE.txt
platforms = All
author = Konstantinos Lampridis
author_email = k.lampridis@hotmail.com

# represents the web home page of the project
url = https://github.com/boromir674/software_patterns

download_url = https://github.com/boromir674/software_patterns/archive/v0.8.0.tar.gz

## PyPi specific information
project_urls =
    Bug Tracker = https://github.com/boromir674/software_patterns/issues
    Source Code = https://github.com/boromir674/software_patterns

keywords = neural style transfer, deep learning, cli
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Utilities
    Typing :: Typed


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest


[options.packages.find]
where=src

#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv,env,env-dev

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 120
skip = .tox,venv,env,env-dev
default_section = THIRDPARTY
known_first_party = src,tests


[semantic_release]
version_variable = src/software_patterns/__init__.py:__version__
# version_source=tag
version_source=source


[check-manifest]
ignore =
    requirements/*
    scripts/*.py
    tox.ini
    .circleci/config.yml
    .travis.yml
    .bettercodehub.yml
    .scrutinizer.yml
    .coveragerc
    .gitignore
    .pylintrc
    .prospector.yml
    .DS_Store
    CHANGELOG.rst
